@@ -85,3 +85,4 @@ v0.2.5:
 v0.2.6:
     - Changed !lose_lives define to a table to enable/disable infinite lives on a sublevel basis.
     - Fixed issue where sometimes Mario would die or have weird interactions on the first frame after respawning in a layer 2 level (thanks to FYRE150 for reporting this).
+    - Finished "extra.asm" routines documentation.
